Shake fix and clip prep
Started actually using the defined constant Shaker instances, which I hadn't actually been using before. Now the 4 strengths of shake are clearly distinct.

Also, I've laid the groundwork for drawing a clipped sprite on the canvas. There's more to code there. This will prevent the black hole (and drifting planets) from painting beyond the visible edge of the map while the world is shaking.

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 canvas {
-  width: 800px;
+  width: 768px;
   height: 480px;
   image-rendering: pixelated;
 }
